publish with name