@@ -1,30 +1,27 @@
 package bmv.pushca.binary.proxy.service;
 
-import static bmv.pushca.binary.proxy.pushca.PushcaMessageFactory.ID_GENERATOR;
 import static bmv.pushca.binary.proxy.pushca.util.BmvObjectUtils.objectToBase64Binary;
 import static bmv.pushca.binary.proxy.pushca.util.SendBinaryHelper.MANIFEST_KEY_CHUNK_INDEX;
 import static bmv.pushca.binary.proxy.pushca.util.SendBinaryHelper.toDatagram;
 import static bmv.pushca.binary.proxy.pushca.util.SendBinaryHelper.toDatagramPrefix;
 import static org.apache.commons.lang3.ArrayUtils.addAll;
 
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
 import java.util.function.Supplier;
 
 import bmv.pushca.binary.proxy.pushca.SendBinaryAgent;
 import bmv.pushca.binary.proxy.pushca.connection.model.BinaryType;
-import bmv.pushca.binary.proxy.pushca.exception.SendBinaryError;
 import bmv.pushca.binary.proxy.pushca.model.BinaryManifest;
 import bmv.pushca.binary.proxy.pushca.model.Datagram;
 import bmv.pushca.binary.proxy.pushca.model.PClient;
-import org.apache.commons.lang3.StringUtils;
+import bmv.pushca.binary.proxy.pushca.util.ThumbnailUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.core.io.buffer.DataBuffer;
@@ -32,65 +29,24 @@ import reactor.core.publisher.Mono;
 
 public class BinaryStreamPublisher implements AutoCloseable {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(BinaryStreamPublisher.class);
-
-  private final UUID binaryId;
-
-  private final String name;
-
-  private final String mimeType;
-
-  private final PClient sender;
+  private static final Logger LOGGER = LoggerFactory.getLogger(BinaryStreamPublisher.class);
 
   private final String pusherInstanceId;
+
+  private final AtomicReference<BinaryManifest> manifestHolder = new AtomicReference<>();
 
   private final Supplier<SendBinaryAgent> sendBinaryAgentSupplier;
 
   private final Map<Integer, Datagram> datagrams = new TreeMap<>();
 
-  protected BinaryStreamPublisher(String id,
-                                  String name,
-                                  String mimeType,
-                                  PClient sender,
-                                  String pusherInstanceId,
+  protected BinaryStreamPublisher(String pusherInstanceId,
                                   Supplier<SendBinaryAgent> sendBinaryAgentSupplier) {
     this.sendBinaryAgentSupplier = sendBinaryAgentSupplier;
-    if (StringUtils.isBlank(id)) {
-      binaryId = ID_GENERATOR.generate();
-    } else {
-      this.binaryId = UUID.fromString(id);
-    }
-
-    this.name = name;
-    this.mimeType = mimeType;
-    this.sender = new PClient(
-        ID_GENERATOR.generate().toString(),
-        sender.accountId(),
-        sender.deviceId(),
-        sender.applicationId()
-    );
     this.pusherInstanceId = pusherInstanceId;
   }
 
-  protected void processChunk(int index, byte[] chunk) throws SendBinaryError {
-    int destHashCode = sender.hashCode();
-    datagrams.put(index, toDatagram(index, chunk));
-    byte[] prefix = toDatagramPrefix(
-        BinaryType.CACHE_BINARY,
-        destHashCode, false,
-        binaryId, index
-    );
-    sendBinaryAgentSupplier.get().send(addAll(prefix, chunk));
-  }
-
-  protected void processChunk(long index, DataBuffer chunkDataBuffer) throws SendBinaryError {
-    if (index < 0 || index > Integer.MAX_VALUE) {
-      throw new IllegalArgumentException(
-          "Datagram Index must be between 0 and " + Integer.MAX_VALUE);
-    }
-    byte[] bytes = new byte[chunkDataBuffer.readableByteCount()];
-    chunkDataBuffer.read(bytes);
-    processChunk((int) index, bytes);
+  public BinaryManifest getManifest() {
+    return manifestHolder.get();
   }
 
   /**
@@ -101,9 +57,11 @@ public class BinaryStreamPublisher implements AutoCloseable {
    * @param chunk the chunk data
    * @return Mono that completes when the chunk has been sent
    */
-  protected Mono<Void> processChunkAsync(int index, byte[] chunk) {
+  public Mono<Void> processChunkAsync(UUID binaryId, int index, byte[] chunk, boolean storeInManifest, PClient sender) {
     int destHashCode = sender.hashCode();
-    datagrams.put(index, toDatagram(index, chunk));
+    if (storeInManifest) {
+      datagrams.put(index, toDatagram(index, chunk));
+    }
     byte[] prefix = toDatagramPrefix(
         BinaryType.CACHE_BINARY,
         destHashCode, false,
@@ -116,46 +74,18 @@ public class BinaryStreamPublisher implements AutoCloseable {
    * Processes a chunk from a DataBuffer asynchronously, ensuring the data is written to the
    * WebSocket channel before the returned Mono completes.
    *
-   * @param index the chunk index
+   * @param index           the chunk index
    * @param chunkDataBuffer the chunk data buffer
    * @return Mono that completes when the chunk has been sent
    */
-  protected Mono<Void> processChunkAsync(long index, DataBuffer chunkDataBuffer) {
+  public Mono<Void> processChunkAsync(UUID binaryId, long index, DataBuffer chunkDataBuffer, boolean storeInManifest, PClient sender) {
     if (index < 0 || index > Integer.MAX_VALUE) {
       return Mono.error(new IllegalArgumentException(
           "Datagram Index must be between 0 and " + Integer.MAX_VALUE));
     }
     byte[] bytes = new byte[chunkDataBuffer.readableByteCount()];
     chunkDataBuffer.read(bytes);
-    return processChunkAsync((int) index, bytes);
-  }
-
-  protected String uploadManifest() throws SendBinaryError {
-    BinaryManifest manifest = new BinaryManifest(
-        binaryId.toString(),
-        name,
-        mimeType,
-        null,
-        List.copyOf(datagrams.values()),
-        null,
-        sender,
-        pusherInstanceId,
-        null,
-        null,
-        Instant.now().getEpochSecond() + Duration.ofMinutes(15).getSeconds()
-    );
-
-    processChunk(MANIFEST_KEY_CHUNK_INDEX, objectToBase64Binary(manifest));
-
-    datagrams.clear();
-
-    return String.format(
-        "https://secure.fileshare.ovh/binary/%s/%s/%s",
-        //"http://localhost:8080/binary/%s/%s/%s",
-        manifest.sender().workSpaceId(),
-        binaryId,
-        URLEncoder.encode(manifest.name(), StandardCharsets.UTF_8)
-    );
+    return processChunkAsync(binaryId, (int) index, bytes, storeInManifest, sender);
   }
 
   /**
@@ -164,7 +94,11 @@ public class BinaryStreamPublisher implements AutoCloseable {
    *
    * @return Mono that emits the binary URL when the manifest has been sent
    */
-  protected Mono<String> uploadManifestAsync() {
+  public Mono<String> uploadManifestAsync(UUID binaryId,
+                                          String name,
+                                          String mimeType,
+                                          PClient sender,
+                                          Function<BinaryStreamPublisher, Mono<Void>> beforeSendHook) {
     BinaryManifest manifest = new BinaryManifest(
         binaryId.toString(),
         name,
@@ -176,22 +110,44 @@ public class BinaryStreamPublisher implements AutoCloseable {
         pusherInstanceId,
         null,
         null,
-        Instant.now().getEpochSecond() + Duration.ofMinutes(15).getSeconds()
+        Instant.now().getEpochSecond() + Duration.ofDays(1).getSeconds()
     );
+
+    manifestHolder.set(manifest);
 
     LOGGER.debug("Publish binary manifest: {}", manifest);
 
     datagrams.clear();
 
-    String url = String.format(
-        "https://secure.fileshare.ovh/binary/%s/%s/%s",
-        //"http://localhost:8080/binary/%s/%s/%s",
+    String url = "https://secure.fileshare.ovh/public-binary-ex.html?w=%s&id=%s&tn=%s".formatted(
         manifest.sender().workSpaceId(),
-        binaryId,
-        URLEncoder.encode(manifest.name(), StandardCharsets.UTF_8)
+        manifest.id(),
+        ThumbnailUtils.buildThumbnailId(manifest.id())
     );
 
-    return processChunkAsync(MANIFEST_KEY_CHUNK_INDEX, objectToBase64Binary(manifest))
+
+    return ((beforeSendHook == null) ? Mono.empty() : beforeSendHook.apply(this))
+        .then(
+            Mono.defer(
+                () -> uploadPreparedManifestAsync(manifest)
+            )
+        )
+        .thenReturn(url);
+  }
+
+  public Mono<String> uploadPreparedManifestAsync(BinaryManifest manifest) {
+    String url = String.format(
+        "https://secure.fileshare.ovh/binary/%s/%s",
+        manifest.sender().workSpaceId(),
+        manifest.id()
+    );
+    return processChunkAsync(
+        UUID.fromString(manifest.id()),
+        MANIFEST_KEY_CHUNK_INDEX,
+        objectToBase64Binary(manifest),
+        false,
+        manifest.sender()
+    )
         .thenReturn(url);
   }
 
